test/antlr_parser/my_cpp_pars/walkers/CPP14Parser.py
# Generated from CPP14.g4 by ANTLR 4.13.1
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class CPP14Parser ( Parser ):

    grammarFileName = "CPP14.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'class'", "'void'", "'public'", "'protected'", 
                     "'private'", "'ifndef'", "'define'", "'endif'", "'include'", 
                     "'static'", "'const'", "'bool'", "'char'", "'int'", 
                     "'float'", "'double'", "'long'", "'short'", "'{'", 
                     "'}'", "'('", "')'", "'<'", "'>'", "';'", "':'", "'::'", 
                     "','", "'#'", "'&'", "'*'" ]

    symbolicNames = [ "<INVALID>", "Class", "Void", "PublicAccess", "ProtectedAccess", 
                      "PrivateAccess", "Ifndef", "Define", "Endif", "Include", 
                      "Static", "Const", "Bool", "Char", "Int", "Float", 
                      "Double", "Long", "Short", "LeftBrace", "RightBrace", 
                      "LeftPar", "RightPar", "LeftChevron", "RightChevron", 
                      "Semi", "Colon", "DoubleColon", "Comma", "Hash", "Ampersand", 
                      "Star", "Identifier", "Whitespace", "Newline", "BlockComment", 
                      "LineComment" ]

    RULE_program = 0
    RULE_openGuardian = 1
    RULE_closeGuardian = 2
    RULE_programContent = 3
    RULE_includeStatement = 4
    RULE_classDefinition = 5
    RULE_className = 6
    RULE_classContent = 7
    RULE_accessSpecifier = 8
    RULE_methodDeclaration = 9
    RULE_constructorDeclaration = 10
    RULE_functionDefinition = 11
    RULE_parameterType = 12
    RULE_attributeDeclaration = 13
    RULE_returnType = 14
    RULE_undefinedReturnType = 15
    RULE_parameterList = 16
    RULE_parameter = 17

    ruleNames =  [ "program", "openGuardian", "closeGuardian", "programContent", 
                   "includeStatement", "classDefinition", "className", "classContent", 
                   "accessSpecifier", "methodDeclaration", "constructorDeclaration", 
                   "functionDefinition", "parameterType", "attributeDeclaration", 
                   "returnType", "undefinedReturnType", "parameterList", 
                   "parameter" ]

    EOF = Token.EOF
    Class=1
    Void=2
    PublicAccess=3
    ProtectedAccess=4
    PrivateAccess=5
    Ifndef=6
    Define=7
    Endif=8
    Include=9
    Static=10
    Const=11
    Bool=12
    Char=13
    Int=14
    Float=15
    Double=16
    Long=17
    Short=18
    LeftBrace=19
    RightBrace=20
    LeftPar=21
    RightPar=22
    LeftChevron=23
    RightChevron=24
    Semi=25
    Colon=26
    DoubleColon=27
    Comma=28
    Hash=29
    Ampersand=30
    Star=31
    Identifier=32
    Whitespace=33
    Newline=34
    BlockComment=35
    LineComment=36

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.1")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def openGuardian(self):
            return self.getTypedRuleContext(CPP14Parser.OpenGuardianContext,0)


        def programContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPP14Parser.ProgramContentContext)
            else:
                return self.getTypedRuleContext(CPP14Parser.ProgramContentContext,i)


        def closeGuardian(self):
            return self.getTypedRuleContext(CPP14Parser.CloseGuardianContext,0)


        def getRuleIndex(self):
            return CPP14Parser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = CPP14Parser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 37
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,0,self._ctx)
            if la_ == 1:
                self.state = 36
                self.openGuardian()


            self.state = 42
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,1,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 39
                    self.programContent() 
                self.state = 44
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,1,self._ctx)

            self.state = 46
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==29:
                self.state = 45
                self.closeGuardian()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class OpenGuardianContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Hash(self, i:int=None):
            if i is None:
                return self.getTokens(CPP14Parser.Hash)
            else:
                return self.getToken(CPP14Parser.Hash, i)

        def Ifndef(self):
            return self.getToken(CPP14Parser.Ifndef, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(CPP14Parser.Identifier)
            else:
                return self.getToken(CPP14Parser.Identifier, i)

        def Define(self):
            return self.getToken(CPP14Parser.Define, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_openGuardian

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterOpenGuardian" ):
                listener.enterOpenGuardian(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitOpenGuardian" ):
                listener.exitOpenGuardian(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitOpenGuardian" ):
                return visitor.visitOpenGuardian(self)
            else:
                return visitor.visitChildren(self)




    def openGuardian(self):

        localctx = CPP14Parser.OpenGuardianContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_openGuardian)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 48
            self.match(CPP14Parser.Hash)
            self.state = 49
            self.match(CPP14Parser.Ifndef)
            self.state = 50
            self.match(CPP14Parser.Identifier)
            self.state = 51
            self.match(CPP14Parser.Hash)
            self.state = 52
            self.match(CPP14Parser.Define)
            self.state = 53
            self.match(CPP14Parser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CloseGuardianContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Hash(self):
            return self.getToken(CPP14Parser.Hash, 0)

        def Endif(self):
            return self.getToken(CPP14Parser.Endif, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_closeGuardian

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCloseGuardian" ):
                listener.enterCloseGuardian(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCloseGuardian" ):
                listener.exitCloseGuardian(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCloseGuardian" ):
                return visitor.visitCloseGuardian(self)
            else:
                return visitor.visitChildren(self)




    def closeGuardian(self):

        localctx = CPP14Parser.CloseGuardianContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_closeGuardian)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 55
            self.match(CPP14Parser.Hash)
            self.state = 56
            self.match(CPP14Parser.Endif)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ProgramContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def includeStatement(self):
            return self.getTypedRuleContext(CPP14Parser.IncludeStatementContext,0)


        def classDefinition(self):
            return self.getTypedRuleContext(CPP14Parser.ClassDefinitionContext,0)


        def functionDefinition(self):
            return self.getTypedRuleContext(CPP14Parser.FunctionDefinitionContext,0)


        def getRuleIndex(self):
            return CPP14Parser.RULE_programContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgramContent" ):
                listener.enterProgramContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgramContent" ):
                listener.exitProgramContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgramContent" ):
                return visitor.visitProgramContent(self)
            else:
                return visitor.visitChildren(self)




    def programContent(self):

        localctx = CPP14Parser.ProgramContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_programContent)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [29]:
                self.enterOuterAlt(localctx, 1)
                self.state = 58
                self.includeStatement()
                pass
            elif token in [1]:
                self.enterOuterAlt(localctx, 2)
                self.state = 59
                self.classDefinition()
                pass
            elif token in [2, 12, 13, 14, 15, 16, 17, 18, 32]:
                self.enterOuterAlt(localctx, 3)
                self.state = 60
                self.functionDefinition()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IncludeStatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Hash(self):
            return self.getToken(CPP14Parser.Hash, 0)

        def Include(self):
            return self.getToken(CPP14Parser.Include, 0)

        def LeftChevron(self):
            return self.getToken(CPP14Parser.LeftChevron, 0)

        def Identifier(self, i:int=None):
            if i is None:
                return self.getTokens(CPP14Parser.Identifier)
            else:
                return self.getToken(CPP14Parser.Identifier, i)

        def RightChevron(self):
            return self.getToken(CPP14Parser.RightChevron, 0)

        def DoubleColon(self, i:int=None):
            if i is None:
                return self.getTokens(CPP14Parser.DoubleColon)
            else:
                return self.getToken(CPP14Parser.DoubleColon, i)

        def getRuleIndex(self):
            return CPP14Parser.RULE_includeStatement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIncludeStatement" ):
                listener.enterIncludeStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIncludeStatement" ):
                listener.exitIncludeStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIncludeStatement" ):
                return visitor.visitIncludeStatement(self)
            else:
                return visitor.visitChildren(self)




    def includeStatement(self):

        localctx = CPP14Parser.IncludeStatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_includeStatement)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(CPP14Parser.Hash)
            self.state = 64
            self.match(CPP14Parser.Include)
            self.state = 65
            self.match(CPP14Parser.LeftChevron)
            self.state = 66
            self.match(CPP14Parser.Identifier)
            self.state = 71
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==27:
                self.state = 67
                self.match(CPP14Parser.DoubleColon)
                self.state = 68
                self.match(CPP14Parser.Identifier)
                self.state = 73
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 74
            self.match(CPP14Parser.RightChevron)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Class(self):
            return self.getToken(CPP14Parser.Class, 0)

        def className(self):
            return self.getTypedRuleContext(CPP14Parser.ClassNameContext,0)


        def LeftBrace(self):
            return self.getToken(CPP14Parser.LeftBrace, 0)

        def RightBrace(self):
            return self.getToken(CPP14Parser.RightBrace, 0)

        def classContent(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(CPP14Parser.ClassContentContext)
            else:
                return self.getTypedRuleContext(CPP14Parser.ClassContentContext,i)


        def Semi(self):
            return self.getToken(CPP14Parser.Semi, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_classDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassDefinition" ):
                listener.enterClassDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassDefinition" ):
                listener.exitClassDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassDefinition" ):
                return visitor.visitClassDefinition(self)
            else:
                return visitor.visitChildren(self)




    def classDefinition(self):

        localctx = CPP14Parser.ClassDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_classDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self.match(CPP14Parser.Class)
            self.state = 77
            self.className()
            self.state = 78
            self.match(CPP14Parser.LeftBrace)
            self.state = 82
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295490620) != 0):
                self.state = 79
                self.classContent()
                self.state = 84
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 85
            self.match(CPP14Parser.RightBrace)
            self.state = 87
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==25:
                self.state = 86
                self.match(CPP14Parser.Semi)


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassNameContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Identifier(self):
            return self.getToken(CPP14Parser.Identifier, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_className

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassName" ):
                listener.enterClassName(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassName" ):
                listener.exitClassName(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassName" ):
                return visitor.visitClassName(self)
            else:
                return visitor.visitChildren(self)




    def className(self):

        localctx = CPP14Parser.ClassNameContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_className)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 89
            self.match(CPP14Parser.Identifier)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ClassContentContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def accessSpecifier(self):
            return self.getTypedRuleContext(CPP14Parser.AccessSpecifierContext,0)


        def methodDeclaration(self):
            return self.getTypedRuleContext(CPP14Parser.MethodDeclarationContext,0)


        def constructorDeclaration(self):
            return self.getTypedRuleContext(CPP14Parser.ConstructorDeclarationContext,0)


        def attributeDeclaration(self):
            return self.getTypedRuleContext(CPP14Parser.AttributeDeclarationContext,0)


        def getRuleIndex(self):
            return CPP14Parser.RULE_classContent

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterClassContent" ):
                listener.enterClassContent(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitClassContent" ):
                listener.exitClassContent(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitClassContent" ):
                return visitor.visitClassContent(self)
            else:
                return visitor.visitChildren(self)




    def classContent(self):

        localctx = CPP14Parser.ClassContentContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_classContent)
        try:
            self.state = 95
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 91
                self.accessSpecifier()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 92
                self.methodDeclaration()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 93
                self.constructorDeclaration()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 94
                self.attributeDeclaration()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AccessSpecifierContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def Colon(self):
            return self.getToken(CPP14Parser.Colon, 0)

        def PublicAccess(self):
            return self.getToken(CPP14Parser.PublicAccess, 0)

        def ProtectedAccess(self):
            return self.getToken(CPP14Parser.ProtectedAccess, 0)

        def PrivateAccess(self):
            return self.getToken(CPP14Parser.PrivateAccess, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_accessSpecifier

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAccessSpecifier" ):
                listener.enterAccessSpecifier(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAccessSpecifier" ):
                listener.exitAccessSpecifier(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAccessSpecifier" ):
                return visitor.visitAccessSpecifier(self)
            else:
                return visitor.visitChildren(self)




    def accessSpecifier(self):

        localctx = CPP14Parser.AccessSpecifierContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_accessSpecifier)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 97
            _la = self._input.LA(1)
            if not((((_la) & ~0x3f) == 0 and ((1 << _la) & 56) != 0)):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 98
            self.match(CPP14Parser.Colon)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class MethodDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(CPP14Parser.ReturnTypeContext,0)


        def Identifier(self):
            return self.getToken(CPP14Parser.Identifier, 0)

        def LeftPar(self):
            return self.getToken(CPP14Parser.LeftPar, 0)

        def RightPar(self):
            return self.getToken(CPP14Parser.RightPar, 0)

        def Semi(self):
            return self.getToken(CPP14Parser.Semi, 0)

        def parameterList(self):
            return self.getTypedRuleContext(CPP14Parser.ParameterListContext,0)


        def Static(self):
            return self.getToken(CPP14Parser.Static, 0)

        def Const(self):
            return self.getToken(CPP14Parser.Const, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_methodDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMethodDeclaration" ):
                listener.enterMethodDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMethodDeclaration" ):
                listener.exitMethodDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMethodDeclaration" ):
                return visitor.visitMethodDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def methodDeclaration(self):

        localctx = CPP14Parser.MethodDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_methodDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==10 or _la==11:
                self.state = 100
                _la = self._input.LA(1)
                if not(_la==10 or _la==11):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


            self.state = 103
            self.returnType()
            self.state = 104
            self.match(CPP14Parser.Identifier)
            self.state = 105
            self.match(CPP14Parser.LeftPar)
            self.state = 107
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295489540) != 0):
                self.state = 106
                self.parameterList()


            self.state = 109
            self.match(CPP14Parser.RightPar)
            self.state = 110
            self.match(CPP14Parser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ConstructorDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def className(self):
            return self.getTypedRuleContext(CPP14Parser.ClassNameContext,0)


        def LeftPar(self):
            return self.getToken(CPP14Parser.LeftPar, 0)

        def RightPar(self):
            return self.getToken(CPP14Parser.RightPar, 0)

        def Semi(self):
            return self.getToken(CPP14Parser.Semi, 0)

        def parameterList(self):
            return self.getTypedRuleContext(CPP14Parser.ParameterListContext,0)


        def getRuleIndex(self):
            return CPP14Parser.RULE_constructorDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterConstructorDeclaration" ):
                listener.enterConstructorDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitConstructorDeclaration" ):
                listener.exitConstructorDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitConstructorDeclaration" ):
                return visitor.visitConstructorDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def constructorDeclaration(self):

        localctx = CPP14Parser.ConstructorDeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_constructorDeclaration)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.className()
            self.state = 113
            self.match(CPP14Parser.LeftPar)
            self.state = 115
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295489540) != 0):
                self.state = 114
                self.parameterList()


            self.state = 117
            self.match(CPP14Parser.RightPar)
            self.state = 118
            self.match(CPP14Parser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDefinitionContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(CPP14Parser.ReturnTypeContext,0)


        def Identifier(self):
            return self.getToken(CPP14Parser.Identifier, 0)

        def LeftPar(self):
            return self.getToken(CPP14Parser.LeftPar, 0)

        def RightPar(self):
            return self.getToken(CPP14Parser.RightPar, 0)

        def Semi(self):
            return self.getToken(CPP14Parser.Semi, 0)

        def parameterList(self):
            return self.getTypedRuleContext(CPP14Parser.ParameterListContext,0)


        def getRuleIndex(self):
            return CPP14Parser.RULE_functionDefinition

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDefinition" ):
                listener.enterFunctionDefinition(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDefinition" ):
                listener.exitFunctionDefinition(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDefinition" ):
                return visitor.visitFunctionDefinition(self)
            else:
                return visitor.visitChildren(self)




    def functionDefinition(self):

        localctx = CPP14Parser.FunctionDefinitionContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_functionDefinition)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 120
            self.returnType()
            self.state = 121
            self.match(CPP14Parser.Identifier)
            self.state = 122
            self.match(CPP14Parser.LeftPar)
            self.state = 124
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 4295489540) != 0):
                self.state = 123
                self.parameterList()


            self.state = 126
            self.match(CPP14Parser.RightPar)
            self.state = 127
            self.match(CPP14Parser.Semi)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParameterTypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(CPP14Parser.ReturnTypeContext,0)


        def className(self):
            return self.getTypedRuleContext(CPP14Parser.ClassNameContext,0)


        def getRuleIndex(self):
            return CPP14Parser.RULE_parameterType

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParameterType" ):
                listener.enterParameterType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParameterType" ):
                listener.exitParameterType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParameterType" ):
                return visitor.visitParameterType(self)
            else:
                return visitor.visitChildren(self)




    def parameterType(self):

        localctx = CPP14Parser.ParameterTypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_parameterType)
        try:
            self.state = 131
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,12,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 129
                self.returnType()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 130
                self.className()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AttributeDeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def returnType(self):
            return self.getTypedRuleContext(CPP14Parser.ReturnTypeContext,0)


        def Identifier(self):
            return self.getToken(CPP14Parser.Identifier, 0)

        def Semi(self):
            return self.getToken(CPP14Parser.Semi, 0)

        def getRuleIndex(self):
            return CPP14Parser.RULE_attributeDeclaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAttributeDeclaration" ):
                listener.enterAttributeDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAttributeDeclaration" ):
                listener.exitAttributeDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAttributeDeclaration" ):
                return visitor.visitAttributeDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def attributeDeclaration(self):
